--- a/style.css
+++ b/style.css
@@ -662,7 +662,7 @@ video {
   display: inline-flex;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   font-size: 1rem;
@@ -683,7 +683,7 @@ video {
   overflow-wrap: break-word;
   border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
   padding: 0px;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -702,7 +702,6 @@ video {
   margin: 0px;
   margin-top: 0.25rem;
   display: block;
-  background-color: transparent;
   padding: 0px;
   font-size: 1rem;
   line-height: 1.5rem;
@@ -710,16 +709,25 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.dark .testReadScore {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .testMathScore {
   margin: 0px;
   margin-top: 0.25rem;
   display: block;
-  background-color: transparent;
   padding: 0px;
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.dark .testMathScore {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .desc {
